// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 foJWrS StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kjonhx"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
      role="group"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
      />
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eDdMqy"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 enJDnJ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eDdMqy"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 enJDnJ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eDdMqy"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 enJDnJ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 eDdMqy"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 enJDnJ"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIYMyI StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIYMyI StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup renders without grommet wrapper 1`] = `
<div
  class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
  role="group"
>
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
      />
    </div>
    <span>
      First
    </span>
  </label>
  <div
    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
  />
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
      />
    </div>
    <span>
      Second
    </span>
  </label>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 iRwvIO StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 huNCKL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iYFhtH"
>
  <div
    class="StyledBox-sc-13pk1d4-0 gsnvgM StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 fWNJrO"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jttHT"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gDkzsB StyledCheckBox-sc-1dbk5ju-6 eaiPwo"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kwqnhR"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 fwaJEy StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fQtXhU"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
